--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                       <div class="fish__location">Great Barrier Reef</div>
                       <div class="fish__diet">Plankton, algae</div>
                   </section>
+                  <section class="fish card">
+                    <div><img  class="fish__image image--card" src="./images/napolean-fish.jpg" /></div>
+                    <div class="fish__name">Nape</div>
+                    <div class="fish__species">Napolean Fish</div>
+                    <div class="fish__length">84</div>
+                    <div class="fish__location">Great Barrier Reef</div>
+                    <div class="fish__diet">Shellfish, sea stars, sea urchins, and crabs.</div>
+                </section>
                 </article>
                 <article class="quotes">
                     <section class="quote card">
