--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Nashville Software School</title>
+        <title>Martin's Marlins & More</title>
         <link rel="stylesheet" href="./styles/main.css">
     </head>
 
@@ -41,8 +41,16 @@
                 </article>
                 <article class="quotes">
                     <section class="quote card">
-                        <div class="quote__text">When you fish for love, bait with your heart, not you r brain.</div>
-                        <div class="quote__author">Mark Twain</div>
+                        <div class="quote__text">"When you fish for love, bait with your heart, not your brain."</div>
+                        <div class="quote__author">- Mark Twain</div>
+                    </section>
+                    <section class="quote card">
+                        <div class="quote__text">“When something is too hard…..There is always another way.”</div>
+                        <div class="quote__author">- Charlie (Dory’s Dad)</div>
+                    </section>
+                    <section class="quote card">
+                        <div class="quote__text">“Well, you never really know, but when they know, you know, y’know?”</div>
+                        <div class="quote__author">- Crush (The Turtle)</div>
                     </section>
                 </article>
                 <article class="locations">
