--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
                         <div class="location__url">https://greatbarrierreef.org/</div>
                         <div class="location__description">One of Australia’s most remarkable natural gifts, the Great Barrier Reef is blessed with the breathtaking beauty of the world’s largest coral reef. The reef contains an abundance of marine life and comprises of over 3000 individual reef systems and coral cays and literally hundreds of picturesque tropical islands with some of the worlds most beautiful sun-soaked, golden beaches.</div>
                     </section>
+                    <section class="location card">
+                        <div>
+                            <img class="location__image image--card" src="./images/bonaire-diving-jennifer-penner.jpg" />
+                        </div>
+                        <div class="location__name">Bonaire</div>
+                        <div class="location__url">https://www.tourismbonaire.com/</div>
+                        <div class="location__description">From the depths of our pristine waters to the height of our tallest peak, Brandaris, you will feel Bonaire’s magic wash over you from the moment you arrive and throughout the days as you become attuned to Bonaire’s unhurried pace.</div>
+                    </section>
+                    <section class="location card">
+                        <div>
+                            <img class="location__image image--card" src="./images/blue-hole.jpg" />
+                        </div>
+                        <div class="location__name">Great Belize Blue Hole</div>
+                        <div class="location__url">https://belize.com/belize-blue-hole/</div>
+                        <div class="location__description">The Great Blue Hole is a world-class destination for recreational scuba divers attracted by the opportunity to dive in crystal-clear waters and see myriad species of marine life including tropical fish and spectacular coral formations.</div>
+                    </section>
                 </article>
             </div>
             <div class="content--right">
