added care tips

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             <div class="content--right">
                 <aside class="tips">
                     <section class="tip">Maintain proper pH levels.</section>
+                    <section class="tip">Provide enough space.</section>
+                    <section class="tip">Clean the tank regularly.</section>
                 </aside>
             </div>
         </main>
