--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
             <img class="siteLogo" src="./images/logo.png" />
             <h1 class="siteTitle">Martin's Marlins &amp; More</h1>
         </header>
+
+        <!-- Start Container  -->
         <main id="container">
             <div class="content--left">
+
+                <!-- Start Fish Collection  -->
                 <article class="fishes">
                     <section class="fish card">
                         <div><img  class="fish__image image--card" src="./images/blueTang.jpg" /></div>
@@ -38,8 +42,11 @@
                     <div class="fish__location">Great Barrier Reef</div>
                     <div class="fish__diet">Shellfish, sea stars, sea urchins, and crabs.</div>
                 </section>
-                </article>
-                <article class="quotes">
+            </article>
+            <!-- End Fish Collection  -->
+
+            <!-- Start Quote Collection  -->
+            <article class="quotes">
                     <section class="quote card">
                         <div class="quote__text">"When you fish for love, bait with your heart, not your brain."</div>
                         <div class="quote__author">- Mark Twain</div>
@@ -53,13 +60,16 @@
                         <div class="quote__author">- Crush (The Turtle)</div>
                     </section>
                 </article>
+                <!-- End Quote Collection  -->
+
+                <!-- Start Locations Collection  -->
                 <article class="locations">
                     <section class="location card">
                         <div>
                             <img class="location__image image--card" src="./images/reef.jpg" />
                         </div>
                         <div class="location__name">Great Barrier Reef</div>
-                        <div class="location__url">https://greatbarrierreef.org/</div>
+                        <div class="location__url"><a href="https://greatbarrierreef.org/">Great Barrier Reef</a></div>
                         <div class="location__description">One of Australia’s most remarkable natural gifts, the Great Barrier Reef is blessed with the breathtaking beauty of the world’s largest coral reef. The reef contains an abundance of marine life and comprises of over 3000 individual reef systems and coral cays and literally hundreds of picturesque tropical islands with some of the worlds most beautiful sun-soaked, golden beaches.</div>
                     </section>
                     <section class="location card">
@@ -67,7 +77,7 @@
                             <img class="location__image image--card" src="./images/bonaire-diving-jennifer-penner.jpg" />
                         </div>
                         <div class="location__name">Bonaire</div>
-                        <div class="location__url">https://www.tourismbonaire.com/</div>
+                        <div class="location__url"><a href="https://www.tourismbonaire.com/">Bonaire</a></div>
                         <div class="location__description">From the depths of our pristine waters to the height of our tallest peak, Brandaris, you will feel Bonaire’s magic wash over you from the moment you arrive and throughout the days as you become attuned to Bonaire’s unhurried pace.</div>
                     </section>
                     <section class="location card">
@@ -75,11 +85,15 @@
                             <img class="location__image image--card" src="./images/blue-hole.jpg" />
                         </div>
                         <div class="location__name">Great Belize Blue Hole</div>
-                        <div class="location__url">https://belize.com/belize-blue-hole/</div>
+                        <div class="location__url"><a href="https://belize.com/belize-blue-hole/">Belize Blue Hole</a></div>
                         <div class="location__description">The Great Blue Hole is a world-class destination for recreational scuba divers attracted by the opportunity to dive in crystal-clear waters and see myriad species of marine life including tropical fish and spectacular coral formations.</div>
                     </section>
                 </article>
+                <!-- End Locations Collection  -->
             </div>
+            <!-- End Container  -->
+
+            <!-- Start Tip Section  -->
             <div class="content--right">
                 <aside class="tips">
                     <section class="tip">Maintain proper pH levels.</section>
@@ -87,6 +101,7 @@
                     <section class="tip">Clean the tank regularly.</section>
                 </aside>
             </div>
+            <!-- End Tip Section  -->
         </main>
 
         <script type="module" src="./scripts/main.js"></script>
